...
        }
    }
    .onContinueUserActivity(CSSearchableItemActionType, perform: moveToHome)
    .onContinueUserActivity(neewProjectActivity, perform: createProject(_:))
    .onOpenURL(perform: openURL)
    .userActivity(neewProjectActivity) { activity in
      activity.title = "New Project"
#if os(iOS) || os(watchOS)
      activity.isEligibleForPrediction = true
#endif
    }
  }

...
